Actions
Bug #12089
closedloader.efi: ExitBootServices() can fail even if we got memory map
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:
Description
I noticed error from ExitBootServices() on my supermicro, this did brought into my attention the fact that even if we do get efi memory map, we still can fail with ExitBootServices() call. The failure exists because the memory map can change even between we call GetMemoryMap() and ExitBootServices().
Testing done: previously seen error is fixed.
Updated by Electric Monk over 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 15ab2c88fabf7859fc2e59b9c88614461f58d4c9
commit 15ab2c88fabf7859fc2e59b9c88614461f58d4c9 Author: Toomas Soome <tsoome@me.com> Date: 2019-12-17T18:44:31.000Z 12089 loader.efi: ExitBootServices() can fail even if we got memory map Reviewed by: John Levon <john.levon@joyent.com> Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions